fixes for nav type, spacing and alignment

--- a/site/css/partials/_nav.scss
+++ b/site/css/partials/_nav.scss
@@ -51,8 +51,6 @@
         display: block;
         float: right;
         padding-left: 1em;
-        padding-top: 0.5em;
-        padding-bottom: 0.5em;
     }
 
     .menu ul {
